# vulcan_hello_triangle

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
